@@ -12,6 +12,7 @@ Nagios 3.x Change Log
 * Fix for notifications.cgi where Update button on right didn't retain host information when no host= was in query parameters
 * Fix for potential bug where a contactgroup with no members could cause parsing errors
 * Fix for W3 validation for history.cgi
+* Fix for W3 validation for extinfo.cgi
 * Added t/ directory for tests. Use make test to run. Requires perl on development server
 
 
